--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/microservices": "^10.4.15",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^6.0.1",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.5",
     "argon2": "^0.41.1",
     "cache-manager": "^5.7.6",
     "cache-manager-redis-yet": "^5.1.5",
